manifests/vaultwarden/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: vaultwarden/server:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data-volume
          mountPath: /data
          subPath: docker-config/vaultwarden/data
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: vaultwarden-data-pvc
