manifests/vaultwarden/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.cowlab.org`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  # tls:
  #   secretName: cowlab-production-tls
